data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1764.wast
;; 5. **Test Description**: Create a `block` containing a `loop` with multiple `br_if` instructions targeting the block. Check if the result types at each branch point are respected and appropriately handled.    - **Constraint Checked**: Results type consistency in multiple branches.    - **CFG Relation**: Ensures CFG consistency in exits from loops to blocks, maintaining stack state.

(assert_invalid
  (module 
    (func $test 
      (block 
        (loop 
          (br_if 1 (i32.const 1)) 
          (br_if 1 (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)